--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
   "require": {
     "php": "^7.1.3"
   },
+  "license": "MIT",
   "autoload": {
     "psr-4": {
       "ChastePhp\\LaravelExtras\\": "src/"
